Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,8 @@
 default:
   tags:
     - shared
-
+    - apap
+    
 .setup-ssh:
   before_script:
     - "which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )"
