Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -99,8 +99,7 @@ publish-asset:
     - build-asset
   script:
     - echo "Checking GCLOUD_SERVICE_KEY"
-    - echo $GCLOUD_SERVICE_KEY | base64 -d || true
-    - echo $GCLOUD_SERVICE_KEY | docker login -u _json_key --password-stdin https://gcr.io
+    - echo $GCLOUD_SERVICE_KEY | docker login -u _json_key --password-stdin https://gcr.io || true
     - docker build -t $IMAGE_REPO/asset:latest -f asset/Dockerfile .
     - docker push $IMAGE_REPO/asset:latest
 
