--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -98,11 +98,9 @@ publish-asset:
   dependencies:
     - build-asset
   script:
-    - echo "Authenticating with Google Cloud..."
-    - echo $GCLOUD_SERVICE_KEY | base64 -d > gcloud-key.json || true
-    - gcloud auth activate-service-account --key-file=gcloud-key.json
-    - gcloud auth configure-docker
-    - docker build -t $IMAGE_REPO/asset:latest -f asset/Dockerfile asset
+    - echo "Checking GCLOUD_SERVICE_KEY"
+    - echo $GCLOUD_SERVICE_KEY | base64 -d | docker login -u _json_key --password-stdin https://gcr.io || true
+    - docker build -t $IMAGE_REPO/asset:latest -f asset/Dockerfile .
     - docker push $IMAGE_REPO/asset:latest
 
 publish-finance:
@@ -111,7 +109,7 @@ publish-finance:
   dependencies:
     - build-finance
   script:
-    - docker build -t $IMAGE_REPO/finance:latest -f finance.report/Dockerfile finance.report
+    - docker build -t $IMAGE_REPO/finance:latest -f finance.report/Dockerfile .
     - docker push $IMAGE_REPO/finance:latest
 
 publish-profile:
@@ -120,7 +118,7 @@ publish-profile:
   dependencies:
     - build-profile
   script:
-    - docker build -t $IMAGE_REPO/profile:latest -f profile/Dockerfile profile
+    - docker build -t $IMAGE_REPO/profile:latest -f profile/Dockerfile .
     - docker push $IMAGE_REPO/profile:latest
 
 publish-project:
@@ -129,7 +127,7 @@ publish-project:
   dependencies:
     - build-project
   script:
-    - docker build -t $IMAGE_REPO/project:latest -f project/Dockerfile project
+    - docker build -t $IMAGE_REPO/project:latest -f project/Dockerfile .
     - docker push $IMAGE_REPO/project:latest
 
 publish-purchase:
@@ -138,7 +136,7 @@ publish-purchase:
   dependencies:
     - build-purchase
   script:
-    - docker build -t $IMAGE_REPO/purchase:latest -f purchase/Dockerfile purchase
+    - docker build -t $IMAGE_REPO/purchase:latest -f purchase/Dockerfile .
     - docker push $IMAGE_REPO/purchase:latest
 
 publish-resource:
@@ -147,7 +145,7 @@ publish-resource:
   dependencies:
     - build-resource
   script:
-    - docker build -t $IMAGE_REPO/resource:latest -f resource/Dockerfile resource
+    - docker build -t $IMAGE_REPO/resource:latest -f resource/Dockerfile .
     - docker push $IMAGE_REPO/resource:latest
 
 # Separate deploy jobs
@@ -157,7 +155,7 @@ deploy-asset:
     - publish-asset
   extends: .setup-ssh
   script:
-    - ssh "$DEPLOY_USERNAME@$DEPLOY_SERVER" "[ -f docker-compose.yml ] && docker pull $IMAGE_REPO/asset:latest && docker-compose up -d asset || echo 'docker-compose.yml not found'"
+    - ssh "$DEPLOY_USERNAME@$DEPLOY_SERVER" "docker pull $IMAGE_REPO/asset:latest && docker-compose up -d asset"
 
 
 deploy-finance:
@@ -166,7 +164,7 @@ deploy-finance:
     - publish-finance
   extends: .setup-ssh
   script:
-    - ssh "$DEPLOY_USERNAME@$DEPLOY_SERVER" "[ -f docker-compose.yml ] && docker pull $IMAGE_REPO/finance:latest && docker-compose up -d finance || echo 'docker-compose.yml not found'"
+    - ssh "$DEPLOY_USERNAME@$DEPLOY_SERVER" "docker pull $IMAGE_REPO/finance:latest && docker-compose up -d finance"
 
 deploy-profile:
   stage: deploy
@@ -174,7 +172,7 @@ deploy-profile:
     - publish-profile
   extends: .setup-ssh
   script:
-    - ssh "$DEPLOY_USERNAME@$DEPLOY_SERVER" "[ -f docker-compose.yml ] && docker pull $IMAGE_REPO/profile:latest && docker-compose up -d profile || echo 'docker-compose.yml not found'"
+    - ssh"$DEPLOY_USERNAME@$DEPLOY_SERVER" "docker pull $IMAGE_REPO/profile:latest && docker-compose up -d profile"
 
 deploy-project:
   stage: deploy
@@ -182,7 +180,7 @@ deploy-project:
     - publish-project
   extends: .setup-ssh
   script:
-    - ssh "$DEPLOY_USERNAME@$DEPLOY_SERVER" "[ -f docker-compose.yml ] && docker pull $IMAGE_REPO/project:latest && docker-compose up -d project || echo 'docker-compose.yml not found'"
+    - ssh "$DEPLOY_USERNAME@$DEPLOY_SERVER" "docker pull $IMAGE_REPO/project:latest && docker-compose up -d project"
 
 deploy-purchase:
   stage: deploy
@@ -190,7 +188,7 @@ deploy-purchase:
     - publish-purchase
   extends: .setup-ssh
   script:
-    - ssh "$DEPLOY_USERNAME@$DEPLOY_SERVER" "[ -f docker-compose.yml ] && docker pull $IMAGE_REPO/purchase:latest && docker-compose up -d purchase || echo 'docker-compose.yml not found'"
+    - ssh "$DEPLOY_USERNAME@$DEPLOY_SERVER" "docker pull $IMAGE_REPO/purchase:latest && docker-compose up -d purchase"
 
 deploy-resource:
   stage: deploy
@@ -198,7 +196,23 @@ deploy-resource:
     - publish-resource
   extends: .setup-ssh
   script:
-    - ssh "$DEPLOY_USERNAME@$DEPLOY_SERVER" "[ -f docker-compose.yml ] && docker pull $IMAGE_REPO/resource:latest && docker-compose up -d resource || echo 'docker-compose.yml not found'"
+    - ssh "$DEPLOY_USERNAME@$DEPLOY_SERVER" "docker pull $IMAGE_REPO/resource:latest && docker-compose up -d resource"
+
+deployment:
+  stage: deploy
+  dependencies:
+    - publish
+  only:
+    - main
+  extends: .setup-ssh
+  script:
+    - echo "Deploying to GCP VM..."
+    - ssh "${DEPLOY_USERNAME}@${DEPLOY_SERVER}" "mkdir -p ~/microservices-deploy/"
+    - rsync -rahv $CI_PROJECT_DIR/docker-compose-deploy.yml "${DEPLOY_USERNAME}@${DEPLOY_SERVER}:~/microservices-deploy/"
+    - ssh "${DEPLOY_USERNAME}@${DEPLOY_SERVER}" 
+      "cd ~/microservices-deploy/ && 
+       docker compose -f docker-compose.yml pull && 
+       docker compose -f docker-compose.yml up -d"
 
 cleaning:
   stage: clean
