--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,49 +4,19 @@ default:
 
 .setup-ssh:
   before_script:
-    - "which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )"
-    - eval $(ssh-agent -s)
-    - echo "$DEPLOY_PRIVATE_KEY" | tr -d '\r' | ssh-add -
-    - mkdir -p ~/.ssh
-    - chmod 700 ~/.ssh
-    - echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config
+  - curl -fsSL https://railway.app/install.sh | sh
+
 
 stages:
   - build
-  - publish
   - deploy
-  - clean
+
 
 variables:
-  GCP_PROJECT_ID: "propensi-451504"
-  IMAGE_REPO: "gcr.io/$GCP_PROJECT_ID"
-  IMAGE_DOCKER_DIND: docker:27.3.1-alpine3.20
   IMAGE_OPENJDK_GRADLE: gradle:8.11.1-jdk21-alpine
 
 # Separate build jobs
-build-asset:
-  image: $IMAGE_OPENJDK_GRADLE
-  stage: build
-  script:
-    - echo "Building asset service..."
-    - cd $CI_PROJECT_DIR/asset
-    - sh gradlew clean assemble
-  artifacts:
-    paths:
-      - asset/build/libs/asset-0.0.1-SNAPSHOT.jar
-
-
-build-finance:
-  image: $IMAGE_OPENJDK_GRADLE
-  stage: build
-  script:
-    - echo "Building finance service..."
-    - cd $CI_PROJECT_DIR/finance.report
-    - sh gradlew clean assemble
-  artifacts:
-    paths:
-      - finance.report/build/libs/finance.report-0.0.1-SNAPSHOT.jar
-
+# Build Jobs
 build-profile:
   image: $IMAGE_OPENJDK_GRADLE
   stage: build
@@ -57,17 +27,6 @@ build-profile:
   artifacts:
     paths:
       - profile/build/libs/profile-0.0.1-SNAPSHOT.jar
-
-build-project:
-  image: $IMAGE_OPENJDK_GRADLE
-  stage: build
-  script:
-    - echo "Building project service..."
-    - cd $CI_PROJECT_DIR/project
-    - sh gradlew clean assemble
-  artifacts:
-    paths:
-      - project/build/libs/project-0.0.1-SNAPSHOT.jar
 
 build-purchase:
   image: $IMAGE_OPENJDK_GRADLE
@@ -80,98 +39,80 @@ build-purchase:
     paths:
       - purchase/build/libs/purchase-0.0.1-SNAPSHOT.jar
 
-build-resource:
+build-asset:
   image: $IMAGE_OPENJDK_GRADLE
   stage: build
   script:
-    - echo "Building resource service..."
-    - cd $CI_PROJECT_DIR/resource
+    - echo "Building asset service..."
+    - cd $CI_PROJECT_DIR/asset
     - sh gradlew clean assemble
   artifacts:
     paths:
-      - resource/build/libs/resource-0.0.1-SNAPSHOT.jar
+      - asset/build/libs/asset-0.0.1-SNAPSHOT.jar
 
-# Separate publish jobs
-publish-asset:
-  image: $IMAGE_DOCKER_DIND
-  stage: publish
-  dependencies:
-    - build-asset
+build-finance:
+  image: $IMAGE_OPENJDK_GRADLE
+  stage: build
   script:
-    - echo "Checking GCLOUD_SERVICE_KEY"
-    - echo $GCLOUD_SERVICE_KEY | base64 -d | docker login -u _json_key --password-stdin https://gcr.io || true
-    - docker build -t $IMAGE_REPO/asset:latest -f asset/Dockerfile .
-    - docker push $IMAGE_REPO/asset:latest
+    - echo "Building finance service..."
+    - cd $CI_PROJECT_DIR/finance
+    - sh gradlew clean assemble
+  artifacts:
+    paths:
+      - finance/build/libs/finance-0.0.1-SNAPSHOT.jar
 
-publish-finance:
-  image: $IMAGE_DOCKER_DIND
-  stage: publish
-  dependencies:
-    - build-finance
+build-project:
+  image: $IMAGE_OPENJDK_GRADLE
+  stage: build
   script:
-    - docker build -t $IMAGE_REPO/finance:latest -f finance.report/Dockerfile .
-    - docker push $IMAGE_REPO/finance:latest
+    - echo "Building project service..."
+    - cd $CI_PROJECT_DIR/project
+    - sh gradlew clean assemble
+  artifacts:
+    paths:
+      - project/build/libs/project-0.0.1-SNAPSHOT.jar
 
-publish-profile:
-  image: $IMAGE_DOCKER_DIND
-  stage: publish
-  dependencies:
-    - build-profile
-  script:
-    - docker build -t $IMAGE_REPO/profile:latest -f profile/Dockerfile .
-    - docker push $IMAGE_REPO/profile:latest
 
-publish-project:
-  image: $IMAGE_DOCKER_DIND
-  stage: publish
-  dependencies:
-    - build-project
-  script:
-    - docker build -t $IMAGE_REPO/project:latest -f project/Dockerfile .
-    - docker push $IMAGE_REPO/project:latest
-
-publish-purchase:
-  image: $IMAGE_DOCKER_DIND
-  stage: publish
-  dependencies:
-    - build-purchase
-  script:
-    - docker build -t $IMAGE_REPO/purchase:latest -f purchase/Dockerfile .
-    - docker push $IMAGE_REPO/purchase:latest
-
-publish-resource:
-  image: $IMAGE_DOCKER_DIND
-  stage: publish
-  dependencies:
-    - build-resource
-  script:
-    - docker build -t $IMAGE_REPO/resource:latest -f resource/Dockerfile .
-    - docker push $IMAGE_REPO/resource:latest
-
-deploy-microservices:
+# Deploy Jobs
+deploy-asset:
   stage: deploy
-  dependencies:
-    - publish-asset
-    - publish-finance
-    - publish-profile
-    - publish-project
-    - publish-purchase
-    - publish-resource
-  extends: .setup-ssh
   script:
-    - echo "Deploying to GCP VM..."
-    - ssh "$DEPLOY_USERNAME@$DEPLOY_SERVER" "mkdir -p ~/microservices-deploy/"
-    - rsync -rahv $CI_PROJECT_DIR/docker-compose-deploy.yml "$DEPLOY_USERNAME@$DEPLOY_SERVER:~/microservices-deploy/"
-    - ssh "$DEPLOY_USERNAME@$DEPLOY_SERVER" "
-        cd ~/microservices-deploy/ && 
-        docker compose -f docker-compose-deploy.yml pull && 
-        docker compose -f docker-compose-deploy.yml up -d"
+    - echo "Deploying asset service to Railway..."
+    - railway login --token $RAILWAY_TOKEN
+    - railway up --service asset
+
+deploy-finance:
+  stage: deploy
+  script:
+    - echo "Deploying finance service to Railway..."
+    - railway login --token $RAILWAY_TOKEN
+    - railway up --service finance
+
+deploy-profile:
+  stage: deploy
+  script:
+    - echo "Deploying profile service to Railway..."
+    - railway login --token $RAILWAY_TOKEN
+    - railway up --service profile
 
 
-cleaning:
-  stage: clean
-  dependencies:
-    - deploy-microservices
-  extends: .setup-ssh
+deploy-project:
+  stage: deploy
   script:
-    - ssh "$DEPLOY_USERNAME@$DEPLOY_SERVER" "docker system prune -af"
+    - echo "Deploying project service to Railway..."
+    - railway login --token $RAILWAY_TOKEN
+    - railway up --service project
+
+deploy-resource:
+  stage: deploy
+  script:
+    - echo "Deploying resource service to Railway..."
+    - railway login --token $RAILWAY_TOKEN
+    - railway up --service resource
+
+deploy-purchase:
+  stage: deploy
+  script:
+    - echo "Deploying purchase service to Railway..."
+    - railway login --token $RAILWAY_TOKEN
+    - railway up --service purchase
