--- a/asset/Dockerfile
+++ b/asset/Dockerfile
@@ -1,7 +1,10 @@
+FROM gradle:latest AS build
+WORKDIR /app
+COPY . .
+RUN gradle build -x test
+
 FROM eclipse-temurin:21-jre-alpine
-
-COPY asset/build/libs/asset-0.0.1-SNAPSHOT.jar /app.jar
-
+WORKDIR /app
+COPY --from=build /app/build/libs/*.jar /app.jar
 EXPOSE 8080
-
 CMD ["java", "-jar", "/app.jar"]
