--- a/finance.report/Dockerfile
+++ b/finance.report/Dockerfile
@@ -1,7 +1,10 @@
+
+FROM gradle:latest AS build
+WORKDIR /app
+COPY . .
+RUN gradle build -x test
+
 FROM eclipse-temurin:21-jre-alpine
-
-COPY finance.report/build/libs/finance.report-0.0.1-SNAPSHOT.jar /app.jar
-
+COPY --from=build /app/build/libs/*.jar /app.jar
 EXPOSE 8081
-
 CMD ["java", "-jar", "/app.jar"]
