--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,9 @@ stages:
 
 variables:
   IMAGE_OPENJDK_GRADLE: gradle:8.11.1-jdk21-alpine
+  IMAGE_DOCKER_DIND: docker:27.3.1-alpine3.20
+
+
 
 # Separate build jobs
 # Build Jobs
@@ -70,7 +73,7 @@ build-project:
 
 # Deploy Jobs
 deploy-asset:
-  image: node:20-alpine
+  image: IMAGE_DOCKER_DIND
   stage: deploy
   script:
     - npm install -g railway
@@ -78,6 +81,7 @@ deploy-asset:
     - railway up --service asset
 
 deploy-finance:
+  image: IMAGE_DOCKER_DIND
   stage: deploy
   script:
     - npm install -g railway
@@ -85,7 +89,7 @@ deploy-finance:
     - railway up --service finance
 
 deploy-profile:
-  image: node:20-alpine
+  image: IMAGE_DOCKER_DIND
   stage: deploy
   script:
     - npm install -g railway
@@ -93,6 +97,7 @@ deploy-profile:
     - railway up --service profile
 
 deploy-project:
+  image: IMAGE_DOCKER_DIND
   stage: deploy
   script:
     - npm install -g railway
@@ -100,6 +105,7 @@ deploy-project:
     - railway up --service project
 
 deploy-purchase:
+  image: IMAGE_DOCKER_DIND
   stage: deploy
   script:
     - npm install -g railway
