--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,14 +6,10 @@ stages:
   - build
   - deploy
 
-
 variables:
   IMAGE_OPENJDK_GRADLE: gradle:8.11.1-jdk21-alpine
   IMAGE_DOCKER_DIND: docker:27.3.1-alpine3.20
 
-
-
-# Separate build jobs
 # Build Jobs
 build-profile:
   image: $IMAGE_OPENJDK_GRADLE
@@ -57,7 +53,7 @@ build-finance:
     - sh gradlew clean assemble
   artifacts:
     paths:
-      - finance/build/libs/finance-0.0.1-SNAPSHOT.jar
+      - finance.report/build/libs/finance-0.0.1-SNAPSHOT.jar
 
 build-project:
   image: $IMAGE_OPENJDK_GRADLE
@@ -70,44 +66,48 @@ build-project:
     paths:
       - project/build/libs/project-0.0.1-SNAPSHOT.jar
 
-
 # Deploy Jobs
 deploy-asset:
-  image: IMAGE_DOCKER_DIND
+  image: $IMAGE_DOCKER_DIND
   stage: deploy
   script:
+    - apk add --no-cache nodejs npm
     - npm install -g railway
     - railway login --token $RAILWAY_TOKEN
     - railway up --service asset
 
 deploy-finance:
-  image: IMAGE_DOCKER_DIND
+  image: $IMAGE_DOCKER_DIND
   stage: deploy
   script:
+    - apk add --no-cache nodejs npm
     - npm install -g railway
     - railway login --token $RAILWAY_TOKEN
     - railway up --service finance
 
 deploy-profile:
-  image: IMAGE_DOCKER_DIND
+  image: $IMAGE_DOCKER_DIND
   stage: deploy
   script:
+    - apk add --no-cache nodejs npm
     - npm install -g railway
     - railway login --token $RAILWAY_TOKEN
     - railway up --service profile
 
 deploy-project:
-  image: IMAGE_DOCKER_DIND
+  image: $IMAGE_DOCKER_DIND
   stage: deploy
   script:
+    - apk add --no-cache nodejs npm
     - npm install -g railway
     - railway login --token $RAILWAY_TOKEN
     - railway up --service project
 
 deploy-purchase:
-  image: IMAGE_DOCKER_DIND
+  image: $IMAGE_DOCKER_DIND
   stage: deploy
   script:
+    - apk add --no-cache nodejs npm
     - npm install -g railway
     - railway login --token $RAILWAY_TOKEN
     - railway up --service purchase
