--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,66 +5,25 @@ stages:
 variables:
   IMAGE_OPENJDK_GRADLE: gradle:8.11.1-jdk21-alpine
   IMAGE_DOCKER_DIND: docker:27.3.1-alpine3.20
+  RAILWAY_IMAGE: ghcr.io/railwayapp/railway:latest
   UBUNTU: ubuntu:latest
 
 # Build Jobs
-build-profile:
+build:
   image: $IMAGE_OPENJDK_GRADLE
   stage: build
+  parallel:
+    matrix:
+      - SERVICE: ["profile", "purchase", "asset", "finance", "project"]
   script:
-    - echo "Building profile service..."
-    - cd $CI_PROJECT_DIR/profile
-    - sh gradlew clean assemble
+    - echo "Building $SERVICE service..."
+    - cd $CI_PROJECT_DIR/$SERVICE
+    - ./gradlew clean assemble
   artifacts:
     paths:
-      - profile/build/libs/profile-0.0.1-SNAPSHOT.jar
-
-build-purchase:
-  image: $IMAGE_OPENJDK_GRADLE
-  stage: build
-  script:
-    - echo "Building purchase service..."
-    - cd $CI_PROJECT_DIR/purchase
-    - sh gradlew clean assemble
-  artifacts:
-    paths:
-      - purchase/build/libs/purchase-0.0.1-SNAPSHOT.jar
-
-build-asset:
-  image: $IMAGE_OPENJDK_GRADLE
-  stage: build
-  script:
-    - echo "Building asset service..."
-    - cd $CI_PROJECT_DIR/asset
-    - sh gradlew clean assemble
-  artifacts:
-    paths:
-      - asset/build/libs/asset-0.0.1-SNAPSHOT.jar
-
-build-finance:
-  image: $IMAGE_OPENJDK_GRADLE
-  stage: build
-  script:
-    - echo "Building finance service..."
-    - cd $CI_PROJECT_DIR/finance.report
-    - sh gradlew clean assemble
-  artifacts:
-    paths:
-      - finance.report/build/libs/finance-0.0.1-SNAPSHOT.jar
-
-build-project:
-  image: $IMAGE_OPENJDK_GRADLE
-  stage: build
-  script:
-    - echo "Building project service..."
-    - cd $CI_PROJECT_DIR/project
-    - sh gradlew clean assemble
-  artifacts:
-    paths:
-      - project/build/libs/project-0.0.1-SNAPSHOT.jar
+      - $SERVICE/build/libs/*.jar
 
 # Deploy Jobs
-# Deploy Job (Uses a single job instead of multiple)
 deploy:
   image: $RAILWAY_IMAGE
   stage: deploy
