--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,8 +4,6 @@ stages:
 
 variables:
   IMAGE_OPENJDK_GRADLE: gradle:8.11.1-jdk21-alpine
-  IMAGE_DOCKER_DIND: docker:27.3.1-alpine3.20
-  RAILWAY_IMAGE: ghcr.io/railwayapp/railway:latest
   UBUNTU: ubuntu:latest
 
 # Build Jobs
@@ -14,25 +12,26 @@ build:
   stage: build
   parallel:
     matrix:
-      - SERVICE: ["profile", "purchase", "asset", "finance.report", "project"]
+      - SERVICE: ["profile", "purchase", "asset", "finance", "project"]
   script:
     - echo "Building $SERVICE service..."
     - cd $CI_PROJECT_DIR/$SERVICE
     - sh gradlew clean assemble
-
   artifacts:
     paths:
-      - $SERVICE/build/libs/*.jar
+      - $CI_PROJECT_DIR/$SERVICE/build/libs/*.jar
 
 # Deploy Jobs
 deploy:
-  image: $RAILWAY_IMAGE
+  image: $UBUNTU
   stage: deploy
   parallel:
     matrix:
       - SERVICE: ["profile", "purchase", "asset", "finance", "project"]
   script:
     - echo "Deploying $SERVICE to Railway..."
+    - apt-get update && apt-get install -y curl
+    - curl -fsSL https://railway.app/install.sh | sh
     - railway link --environment Development --project $RAILWAY_PROJECT_ID
     - railway up --service $SERVICE
   only:
