added forgotten finance.report

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ build:
   stage: build
   parallel:
     matrix:
-      - SERVICE: ["profile", "purchase", "asset", "finance", "project"]
+      - SERVICE: ["profile", "purchase", "asset", "finance.report", "project"]
   script:
     - echo "Building $SERVICE service..."
     - cd $CI_PROJECT_DIR/$SERVICE
