--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,7 +34,8 @@ build-asset:
   artifacts:
     paths:
       - asset/build/libs/asset-0.0.1-SNAPSHOT.jar
-
+  only:
+    - main
 
 build-finance:
   image: $IMAGE_OPENJDK_GRADLE
@@ -46,6 +47,8 @@ build-finance:
   artifacts:
     paths:
       - finance.report/build/libs/finance.report-0.0.1-SNAPSHOT.jar
+  only:
+    - main
 
 build-profile:
   image: $IMAGE_OPENJDK_GRADLE
@@ -57,6 +60,8 @@ build-profile:
   artifacts:
     paths:
       - profile/build/libs/profile-0.0.1-SNAPSHOT.jar
+  only:
+    - main
 
 build-project:
   image: $IMAGE_OPENJDK_GRADLE
@@ -68,6 +73,8 @@ build-project:
   artifacts:
     paths:
       - project/build/libs/project-0.0.1-SNAPSHOT.jar
+  only:
+    - main
 
 build-purchase:
   image: $IMAGE_OPENJDK_GRADLE
@@ -79,6 +86,8 @@ build-purchase:
   artifacts:
     paths:
       - purchase/build/libs/purchase-0.0.1-SNAPSHOT.jar
+  only:
+    - main
 
 build-resource:
   image: $IMAGE_OPENJDK_GRADLE
@@ -90,6 +99,8 @@ build-resource:
   artifacts:
     paths:
       - resource/build/libs/resource-0.0.1-SNAPSHOT.jar
+  only:
+    - main
 
 # Separate publish jobs
 publish-asset:
@@ -102,6 +113,8 @@ publish-asset:
     - echo $GCLOUD_SERVICE_KEY | base64 -d | docker login -u _json_key --password-stdin https://gcr.io || true
     - docker build -t $IMAGE_REPO/asset:latest -f asset/Dockerfile .
     - docker push $IMAGE_REPO/asset:latest
+  only:
+    - main
 
 publish-finance:
   image: $IMAGE_DOCKER_DIND
@@ -111,6 +124,8 @@ publish-finance:
   script:
     - docker build -t $IMAGE_REPO/finance:latest -f finance.report/Dockerfile .
     - docker push $IMAGE_REPO/finance:latest
+  only:
+    - main
 
 publish-profile:
   image: $IMAGE_DOCKER_DIND
@@ -120,7 +135,9 @@ publish-profile:
   script:
     - docker build -t $IMAGE_REPO/profile:latest -f profile/Dockerfile .
     - docker push $IMAGE_REPO/profile:latest
-
+  only:
+    - main
+    
 publish-project:
   image: $IMAGE_DOCKER_DIND
   stage: publish
@@ -129,6 +146,8 @@ publish-project:
   script:
     - docker build -t $IMAGE_REPO/project:latest -f project/Dockerfile .
     - docker push $IMAGE_REPO/project:latest
+  only:
+    - main
 
 publish-purchase:
   image: $IMAGE_DOCKER_DIND
@@ -138,6 +157,8 @@ publish-purchase:
   script:
     - docker build -t $IMAGE_REPO/purchase:latest -f purchase/Dockerfile .
     - docker push $IMAGE_REPO/purchase:latest
+  only:
+    - main
 
 publish-resource:
   image: $IMAGE_DOCKER_DIND
@@ -147,6 +168,8 @@ publish-resource:
   script:
     - docker build -t $IMAGE_REPO/resource:latest -f resource/Dockerfile .
     - docker push $IMAGE_REPO/resource:latest
+  only:
+    - main
 
 deploy-microservices:
   stage: deploy
@@ -166,6 +189,8 @@ deploy-microservices:
         cd ~/microservices-deploy/ && 
         docker compose -f docker-compose-deploy.yml pull && 
         docker compose -f docker-compose-deploy.yml up -d"
+  only:
+    - main
 
 
 cleaning:
@@ -175,3 +200,6 @@ cleaning:
   extends: .setup-ssh
   script:
     - ssh "$DEPLOY_USERNAME@$DEPLOY_SERVER" "docker system prune -af"
+  only:
+    - main
+
