--- a/purchase/src/main/resources/application.yml
+++ b/purchase/src/main/resources/application.yml
@@ -1,3 +1,5 @@
+server:
+    port: 8084
 spring:
   application:
     name: purchase
@@ -23,5 +25,5 @@ spring:
       ddl-auto: create
 purchase:
   app:
-    jwtSecret: ${JWT_SECRET_KEY:HWlEIJMvCDcKFNTzNOXCVjrArVFkLbcEa}
+    jwtSecret: ${JWT_SECRET_KEY:}
     jwtExpirationMs: 86400000
