--- a/project/src/main/resources/application.yml
+++ b/project/src/main/resources/application.yml
@@ -23,5 +23,5 @@ spring:
       ddl-auto: create
 project:
   app:
-    jwtSecret: ${JWT_SECRET_KEY:HWlEIJMvCDcKFNTzNOXCVjrArVFkLbcEa}
+    jwtSecret: ${JWT_SECRET_KEY}
     jwtExpirationMs: 86400000
