--- a/profile/src/main/resources/application.yml
+++ b/profile/src/main/resources/application.yml
@@ -24,6 +24,7 @@ spring:
 profile:
   app:
     jwtSecret: ${JWT_SECRET_KEY}
+    jwtPublicKey: ${JWT_PUBLIC_KEY}
     jwtExpirationMs: 86400000
 
 logging:
