--- a/profile/src/main/resources/application.yml
+++ b/profile/src/main/resources/application.yml
@@ -26,4 +26,12 @@ spring:
 profile:
   app:
     jwtSecret: ${JWT_SECRET_KEY}
+    jwtPublicKey: ${JWT_PUBLIC_KEY}
     jwtExpirationMs: 86400000
+
+logging:
+  file:
+    name: logs/profile-application.log
+  level:
+    root: INFO
+    gpl.karina.profile: DEBUG
