--- a/purchase/src/main/resources/application.yml
+++ b/purchase/src/main/resources/application.yml
@@ -22,12 +22,12 @@ spring:
             non_contextual_creation: true
         dialect: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
   servlet:
     multipart:
       max-file-size: 100MB
       max-request-size: 100MB
 purchase:
   app:
-    jwtSecret: ${JWT_SECRET_KEY:}
+    jwtSecret: ${JWT_SECRET_KEY}
     jwtExpirationMs: 86400000
