--- a/project/.env.example
+++ b/project/.env.example
@@ -1,11 +1,11 @@
 JWT_SECRET_KEY=
+JWT_PUBLIC_KEY=
+
 JWT_EXPIRATION_MS=
 DATABASE_URL_DEV=
 DATABASE_USERNAME_DEV=
 DATABASE_PASSWORD_DEV=
 
-POSTGRES_USER=
-POSTGRES_PASSWORD=
 ASSET_URL=
 FINANCE_URL=
 PROFILE_URL=
