--- a/asset/src/main/resources/application.yml
+++ b/asset/src/main/resources/application.yml
@@ -25,5 +25,12 @@ spring:
       ddl-auto: create-drop
 asset:
   app:
-    jwtSecret: ${JWT_SECRET_KEY}
-    jwtExpirationMs: 86400000
+    jwtPublicKey: ${JWT_PUBLIC_KEY}
+    jwtExpirationMs: ${JWT_EXPIRATION_MS}
+
+logging:
+  file:
+    name: logs/asset-application.log
+  level:
+    root: INFO
+    gpl.karina.asset: DEBUG
