--- a/profile/src/main/resources/application.yml
+++ b/profile/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
             non_contextual_creation: true
         dialect: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
 profile:
   app:
     jwtSecret: ${JWT_SECRET_KEY}
