--- a/asset/src/main/resources/application.yml
+++ b/asset/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
             non_contextual_creation: true
         dialect: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
 asset:
   app:
     jwtPublicKey: ${JWT_PUBLIC_KEY}
