update: fix script heredoc syntax

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -197,8 +197,8 @@ deploy-microservices:
     - echo "Deploying to GCP VM..."
     - ssh "$DEPLOY_USERNAME@$DEPLOY_SERVER" "mkdir -p ~/microservices-deploy/"
     - rsync -rahv $CI_PROJECT_DIR/docker-compose-deploy.yml "$DEPLOY_USERNAME@$DEPLOY_SERVER:~/microservices-deploy/"
-    - ssh "$DEPLOY_USERNAME@$DEPLOY_SERVER" "cat > ~/microservices-deploy/.env <<EOF
-      DATABASE_URL_ASSET=${DATABASE_URL_ASSET}
+    - >
+      ssh "$DEPLOY_USERNAME@$DEPLOY_SERVER" "echo 'DATABASE_URL_ASSET=${DATABASE_URL_ASSET}
       DATABASE_USERNAME=${DATABASE_USERNAME}
       DATABASE_PASSWORD=${DATABASE_PASSWORD}
       JWT_PUBLIC_KEY=${JWT_PUBLIC_KEY}
@@ -208,8 +208,7 @@ deploy-microservices:
       JWT_SECRET_KEY=${JWT_SECRET_KEY}
       DATABASE_URL_PROJECT=${DATABASE_URL_PROJECT}
       DATABASE_URL_PURCHASE=${DATABASE_URL_PURCHASE}
-      DATABASE_URL_RESOURCE=${DATABASE_URL_RESOURCE}
-      EOF"
+      DATABASE_URL_RESOURCE=${DATABASE_URL_RESOURCE}' > ~/microservices-deploy/.env"
     - ssh "$DEPLOY_USERNAME@$DEPLOY_SERVER" "
         cd ~/microservices-deploy/ && 
         docker-compose -f docker-compose-deploy.yml pull && 
